k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: online-shop-ns
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
